@@ -25,10 +25,13 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
@@ -78,7 +81,8 @@ public class MLModel extends Entity
         HasOwners<MLModel>,
         HasDomains<MLModel>,
         HasSubTypes<MLModel>,
-        HasStructuredProperties<MLModel> {
+        HasStructuredProperties<MLModel>,
+        HasDocumentation<MLModel> {
 
   private static final String ENTITY_TYPE = "mlModel";
   private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
@@ -156,15 +160,16 @@ public class MLModel extends Entity
   @Override
   @Nonnull
   public List<Class<? extends com.linkedin.data.template.RecordTemplate>> getDefaultAspects() {
-    return List.of(
-        com.linkedin.common.Ownership.class,
-        com.linkedin.common.GlobalTags.class,
-        com.linkedin.common.GlossaryTerms.class,
-        com.linkedin.domain.Domains.class,
-        com.linkedin.common.Status.class,
-        com.linkedin.common.InstitutionalMemory.class,
-        MLModelProperties.class,
-        com.linkedin.ml.metadata.EditableMLModelProperties.class);
+    return Collections.unmodifiableList(
+        Arrays.asList(
+            com.linkedin.common.Ownership.class,
+            com.linkedin.common.GlobalTags.class,
+            com.linkedin.common.GlossaryTerms.class,
+            com.linkedin.domain.Domains.class,
+            com.linkedin.common.Status.class,
+            com.linkedin.common.InstitutionalMemory.class,
+            MLModelProperties.class,
+            com.linkedin.ml.metadata.EditableMLModelProperties.class));
   }
 
   /**
@@ -1075,7 +1080,10 @@ public class MLModel extends Entity
         throw new IllegalArgumentException(
             "Invalid environment: "
                 + env
-                + ". Must be one of: PROD, DEV, STAGING, TEST, QA, UAT, EI, PRE, STG, NON_PROD, CORP",
+                + ". Must be one of: "
+                + Arrays.stream(FabricType.values())
+                    .map(Enum::name)
+                    .collect(Collectors.joining(", ")),
             e);
       }
     }
